--- a/static/index.html
+++ b/static/index.html
@@ -231,7 +231,7 @@
   learnMoreBtn.addEventListener('mouseleave', closeLabel);
   learnMoreBtn.addEventListener('blur', closeLabel);
 
-  /* ====== Video handling ====== */
+  /* ====== Video handling (safe + minimal) ====== */
   const fsBtn   = document.getElementById('fullscreenToggle');
   const video   = document.getElementById('lyloVideo');
   const wrapper = document.querySelector('.video-wrapper');
@@ -245,35 +245,65 @@
 
   function safePlay(){ if (!video) return; try { video.play().catch(()=>{}); } catch(e){} }
 
-  // iOS helper actions
-  function nudgeIOS(){
+  // ---- Frame-driven stall detection (preferred) ----
+  let lastFrameTime = performance.now();
+  let rewindCooldownUntil = 0;
+
+  function maybeRewindIOS(reason){
     if (!IS_IOS) return;
-    try {
-      // micro seek forward then back a frame-equivalent to kick decoders
-      const t = video.currentTime || 0;
-      video.currentTime = Math.max(0, t + 0.001);
-    } catch(e){}
-  }
-  function rewindIOS(seconds=10){
-    if (!IS_IOS) return;
+    const now = performance.now();
+    if (now < rewindCooldownUntil) return;         // cooldown
+    // seek back ~10s (or 3s near start), then play
     try {
       const t = video.currentTime || 0;
-      video.currentTime = Math.max(0, t - seconds);
+      video.currentTime = Math.max(0, t > 12 ? t - 10 : Math.max(0, t - 3));
       safePlay();
+      rewindCooldownUntil = now + 4000;           // 4s cooldown
     } catch(e){}
-  }
-  function reloadIOS(){
-    if (!IS_IOS) return;
-    try { video.load(); safePlay(); } catch(e){}
   }
 
-  // Autoplay boot
-  (function boot(){
+  function startFrameWatch(){
     if (!video) return;
-    const onReady = () => safePlay();
+    if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
+      const tick = () => {
+        // schedule next frame first to avoid missing frames during heavy work
+        video.requestVideoFrameCallback((now /*ms*/, metadata) => {
+          lastFrameTime = now;
+          tick();
+        });
+      };
+      tick();
+
+      // lightweight watchdog — do not spam, just check every 1.2s
+      setInterval(() => {
+        if (document.visibilityState !== 'visible') return;
+        if (video.paused) return;
+        const now = performance.now();
+        // If no new frame for ~1.8s, iOS likely stalled
+        if (now - lastFrameTime > 1800) {
+          maybeRewindIOS('rvfc-stall');
+        }
+      }, 1200);
+    } else {
+      // Fallback: timeupdate heartbeat
+      let lastTU = Date.now();
+      video.addEventListener('timeupdate', () => { lastTU = Date.now(); });
+      setInterval(() => {
+        if (document.visibilityState !== 'visible') return;
+        if (video.paused) return;
+        if (Date.now() - lastTU > 2000) {
+          maybeRewindIOS('tu-stall');
+        }
+      }, 1200);
+    }
+  }
+
+  // Start once video can play
+  if (video){
+    const onReady = () => { safePlay(); startFrameWatch(); };
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
 
-    // Tap fallback
+    // Tap-to-play fallback
     const onTap = () => {
       safePlay();
       if (video.paused) { video.setAttribute('controls', ''); safePlay(); }
@@ -282,53 +312,18 @@
     video.addEventListener('click', onTap, { once:true });
 
     video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
-  })();
+  }
 
-  // Resume when returning to page/app
+  // Resume when returning to page/app (no seeks here)
   function resume(){
     if (!video) return;
     if (video.readyState < 2 || video.paused) safePlay();
-    if (IS_IOS) nudgeIOS();
   }
   document.addEventListener('visibilitychange', () => { if (document.visibilityState === 'visible') resume(); });
   window.addEventListener('pageshow', resume);
   window.addEventListener('focus', resume);
 
-  // iOS stall watchdog with rewind fallback
-  if (IS_IOS){
-    let lastUpdate = Date.now();
-    let lastRewindAt = 0;
-    const REWIND_COOLDOWN = 2500; // avoid rewinding too frequently
-
-    video.addEventListener('timeupdate', () => { lastUpdate = Date.now(); });
-
-    function maybeRewind(reason){
-      const now = Date.now();
-      if (now - lastRewindAt < REWIND_COOLDOWN) { nudgeIOS(); return; }
-      lastRewindAt = now;
-      // Try a 10s rewind (your observed fix); if near start, fallback to 3s.
-      const t = video.currentTime || 0;
-      rewindIOS(t > 12 ? 10 : 3);
-    }
-
-    // Poll for stalls (~2s without timeupdate)
-    setInterval(() => {
-      if (document.visibilityState !== 'visible') return;
-      if (video.paused) return;
-      if (Date.now() - lastUpdate > 2000){
-        maybeRewind('watchdog');
-        // If still no progress after a brief beat, reload as last resort
-        setTimeout(() => { if (Date.now() - lastUpdate > 2300) reloadIOS(); }, 300);
-      }
-    }, 1000);
-
-    // Buffering-ish events: try rewind first
-    ['waiting','stalled','suspend','emptied'].forEach(evt=>{
-      video.addEventListener(evt, () => { maybeRewind(evt); });
-    });
-  }
-
-  // Fullscreen handling: native on iOS, wrapper on others
+  // ---- Fullscreen: native on iOS, wrapper elsewhere (no hacks) ----
   function isFullscreen(){ return document.fullscreenElement || document.webkitFullscreenElement || null; }
   async function enterFullscreen(){
     if (IS_IOS && video && video.webkitEnterFullscreen) { try { return video.webkitEnterFullscreen(); } catch(e){} }
@@ -350,25 +345,16 @@
   document.addEventListener('fullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
   document.addEventListener('webkitfullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
 
-  // iOS: on entering native fullscreen, verify motion; if stuck, rewind; if still stuck, reload.
+  // On entering iOS native fullscreen, if it stalls within ~1.5s, do one rewind (cooldown protected)
   if (IS_IOS && video){
     video.addEventListener('webkitbeginfullscreen', () => {
-      const before = video.currentTime || 0;
-      nudgeIOS();
+      const enteredAt = performance.now();
       setTimeout(() => {
-        const after = video.currentTime || 0;
-        if (after <= before + 0.01) {
-          rewindIOS(before > 12 ? 10 : 3);
-          setTimeout(() => {
-            const after2 = video.currentTime || 0;
-            if (after2 <= before + 0.01) reloadIOS();
-          }, 500);
+        if (performance.now() - lastFrameTime > 1500 && !video.paused) {
+          maybeRewindIOS('enter-fs');
         }
-      }, 500);
+      }, 1600);
     });
-
-    // iOS can show a stale frame after close; reload quickly
-    video.addEventListener('webkitendfullscreen', () => setTimeout(reloadIOS, 400));
   }
 
   /* ====== Mobile-only delayed nav for CTA (no spinner) ====== */
