--- a/static/index.html
+++ b/static/index.html
@@ -231,7 +231,7 @@
   learnMoreBtn.addEventListener('mouseleave', closeLabel);
   learnMoreBtn.addEventListener('blur', closeLabel);
 
-  /* ====== Video handling (safe + minimal) ====== */
+  /* ====== Video handling (frame-driven + iOS-specific recovery) ====== */
   const fsBtn   = document.getElementById('fullscreenToggle');
   const video   = document.getElementById('lyloVideo');
   const wrapper = document.querySelector('.video-wrapper');
@@ -245,60 +245,35 @@
 
   function safePlay(){ if (!video) return; try { video.play().catch(()=>{}); } catch(e){} }
 
-  // ---- Frame-driven stall detection (preferred) ----
+  // Frame progress tracking (via RVFC where available)
   let lastFrameTime = performance.now();
-  let rewindCooldownUntil = 0;
+  function startFrameWatch(){
+    if (!video) return;
+    if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
+      const loop = () => {
+        video.requestVideoFrameCallback((now/*ms*/) => { lastFrameTime = now; loop(); });
+      };
+      loop();
+    } else {
+      video.addEventListener('timeupdate', () => { lastFrameTime = performance.now(); });
+    }
+  }
 
-  function maybeRewindIOS(reason){
+  // iOS helpers
+  function maybeRewindIOS(){
     if (!IS_IOS) return;
-    const now = performance.now();
-    if (now < rewindCooldownUntil) return;         // cooldown
-    // seek back ~10s (or 3s near start), then play
     try {
       const t = video.currentTime || 0;
       video.currentTime = Math.max(0, t > 12 ? t - 10 : Math.max(0, t - 3));
       safePlay();
-      rewindCooldownUntil = now + 4000;           // 4s cooldown
     } catch(e){}
   }
-
-  function startFrameWatch(){
-    if (!video) return;
-    if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
-      const tick = () => {
-        // schedule next frame first to avoid missing frames during heavy work
-        video.requestVideoFrameCallback((now /*ms*/, metadata) => {
-          lastFrameTime = now;
-          tick();
-        });
-      };
-      tick();
-
-      // lightweight watchdog — do not spam, just check every 1.2s
-      setInterval(() => {
-        if (document.visibilityState !== 'visible') return;
-        if (video.paused) return;
-        const now = performance.now();
-        // If no new frame for ~1.8s, iOS likely stalled
-        if (now - lastFrameTime > 1800) {
-          maybeRewindIOS('rvfc-stall');
-        }
-      }, 1200);
-    } else {
-      // Fallback: timeupdate heartbeat
-      let lastTU = Date.now();
-      video.addEventListener('timeupdate', () => { lastTU = Date.now(); });
-      setInterval(() => {
-        if (document.visibilityState !== 'visible') return;
-        if (video.paused) return;
-        if (Date.now() - lastTU > 2000) {
-          maybeRewindIOS('tu-stall');
-        }
-      }, 1200);
-    }
+  function reloadIOS(){
+    if (!IS_IOS) return;
+    try { video.load(); safePlay(); } catch(e){}
   }
 
-  // Start once video can play
+  // Boot once ready
   if (video){
     const onReady = () => { safePlay(); startFrameWatch(); };
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
@@ -314,7 +289,7 @@
     video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
   }
 
-  // Resume when returning to page/app (no seeks here)
+  // Resume when returning to page/app (no seeks)
   function resume(){
     if (!video) return;
     if (video.readyState < 2 || video.paused) safePlay();
@@ -323,7 +298,7 @@
   window.addEventListener('pageshow', resume);
   window.addEventListener('focus', resume);
 
-  // ---- Fullscreen: native on iOS, wrapper elsewhere (no hacks) ----
+  // Fullscreen handling: native on iOS, wrapper elsewhere
   function isFullscreen(){ return document.fullscreenElement || document.webkitFullscreenElement || null; }
   async function enterFullscreen(){
     if (IS_IOS && video && video.webkitEnterFullscreen) { try { return video.webkitEnterFullscreen(); } catch(e){} }
@@ -345,15 +320,27 @@
   document.addEventListener('fullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
   document.addEventListener('webkitfullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
 
-  // On entering iOS native fullscreen, if it stalls within ~1.5s, do one rewind (cooldown protected)
+  // iOS: recover **after** exiting fullscreen (swipe or X)
   if (IS_IOS && video){
-    video.addEventListener('webkitbeginfullscreen', () => {
-      const enteredAt = performance.now();
+    video.addEventListener('webkitendfullscreen', () => {
+      // Force inline presentation, then resume
+      try { if (video.webkitSetPresentationMode) video.webkitSetPresentationMode('inline'); } catch(e){}
+      safePlay();
+
+      // Give the UI a beat, then if frames aren't advancing, do one rewind; if still stuck, reload.
+      const check1Delay = 350;   // quick check
+      const check2Delay = 600;   // follow-up if still stuck
+
       setTimeout(() => {
-        if (performance.now() - lastFrameTime > 1500 && !video.paused) {
-          maybeRewindIOS('enter-fs');
+        const stale1 = (performance.now() - lastFrameTime) > 700 && !video.paused;
+        if (stale1) {
+          maybeRewindIOS();
+          setTimeout(() => {
+            const stale2 = (performance.now() - lastFrameTime) > 1200 && !video.paused;
+            if (stale2) reloadIOS();
+          }, check2Delay);
         }
-      }, 1600);
+      }, check1Delay);
     });
   }
 
