--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,10 @@
     --bg:#0A1220; --bg-soft:#0D1729;
     --text:#F5F7FA; --muted:#C7CCD7;
     --cta:#111722; --radius:20px; --space:22px; --container:1360px;
+    --accent:#54a0ff; --lm-size:36px;
     --font:-apple-system, BlinkMacSystemFont,"SF Pro Display","SF Pro Text","Helvetica Neue","Segoe UI",Roboto,Arial,sans-serif;
     --bg-top:#0A1220; --bg-bottom:#080D18;
     --noise:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO0WQ8AAW0B8w1i6b0AAAAASUVORK5CYII=");
-    --accent:#54a0ff;
-    --lm-size:36px;
   }
 
   *{box-sizing:border-box}
@@ -82,8 +81,7 @@
         "bullets"
         "cta"
         "note";
-      /* nudge content up a bit on mobile */
-      padding:calc(64px + 24px) var(--space) clamp(20px,3vh,40px);
+      padding:calc(64px + 24px) var(--space) clamp(20px,3vh,40px); /* nudge up on mobile */
     }
     .logo{ margin-bottom:8px; }
     .tagline{ margin-bottom:22px; }
@@ -105,7 +103,7 @@
   .bullets{grid-area:bullets;list-style:none;padding:0;display:grid;gap:12px;justify-content:center;max-width:640px;text-align:center;margin:0 0 20px;}
   .bullet{font-family:var(--font);font-size:17px;line-height:1.55;max-width:440px;margin:0 auto;}
 
-  /* CTA (shimmer hover + mobile delay state) */
+  /* CTA with shimmer */
   .cta{
     grid-area:cta; display:inline-block; width:auto; padding:12px 20px;
     text-align:center; font-weight:600; font-size:16px; color:var(--text);
@@ -132,11 +130,10 @@
   .video-wrapper video{width:100%;height:auto;max-height:62vh;display:block;object-fit:cover;border-radius:0;}
   @media(max-width:980px){.video-wrapper{border:1px solid rgba(245,247,250,0.22);}}
 
-  /* Buttons on video */
   .fullscreen-btn{position:absolute;bottom:12px;right:12px;background:rgba(17,23,34,.7);color:var(--text);font-size:18px;font-weight:600;line-height:1;padding:8px 12px;border:none;border-radius:10px;cursor:pointer;transition:background .2s ease,transform .06s ease;z-index:2;}
   .fullscreen-btn:hover{background:rgba(17,23,34,.9);transform:translateY(-1px);}
 
-  /* "i" pill — circular at rest, expands on hover/auto */
+  /* "i" pill (circle -> pill) */
   .learnmore-btn{
     position:absolute;top:12px;right:12px;z-index:2;
     display:inline-flex;align-items:center;justify-content:center;
@@ -152,11 +149,25 @@
   .learnmore-btn.expanded .label,.learnmore-btn:hover .label,.learnmore-btn:focus-visible .label{max-width:120px;opacity:1;margin-left:2px;}
   .learnmore-btn:hover{background:rgba(17,23,34,0.8);}
 
-  /* Fullscreen CSS */
+  /* Native fullscreen (desktop/tablet) */
   .video-wrapper:fullscreen,.video-wrapper:-webkit-full-screen{width:100vw;height:100vh;max-width:none;border-radius:0;}
   .video-wrapper:fullscreen video,.video-wrapper:-webkit-full-screen video{width:100%;height:100%;max-height:none;object-fit:contain;border-radius:0;box-shadow:none;}
   .video-wrapper:fullscreen .fullscreen-btn,.video-wrapper:-webkit-full-screen .fullscreen-btn{top:calc(env(safe-area-inset-top, 0px) + 12px);right:calc(env(safe-area-inset-right, 0px) + 12px);bottom:auto;}
   .video-wrapper:fullscreen .learnmore-btn,.video-wrapper:-webkit-full-screen .learnmore-btn{ display:none; }
+
+  /* iOS simulated fullscreen overlay */
+  .fs-overlay{
+    position:fixed; inset:0; z-index:10000; background:#000; display:none;
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  }
+  .fs-overlay.open{ display:flex; align-items:center; justify-content:center; }
+  .fs-overlay .video-wrapper{ width:100%; height:100%; max-width:none; border-radius:0; box-shadow:none; }
+  .fs-overlay .video-wrapper video{ width:100%; height:100%; max-height:none; object-fit:contain; }
+  .fs-overlay .learnmore-btn{ display:none; }
+  .fs-overlay .fullscreen-btn{
+    position:absolute; top:calc(env(safe-area-inset-top) + 12px); right:calc(env(safe-area-inset-right) + 12px);
+    bottom:auto;
+  }
 
   footer{text-align:center;padding:20px 0;border-top:1px solid rgba(255,255,255,.06);color:var(--muted);font-size:14px;}
 </style>
@@ -217,181 +228,192 @@
 </footer>
 
 <script>
-/* ---------- Mobile menu ---------- */
-const hamburger = document.getElementById('hamburger');
-const mobileMenu = document.getElementById('mobileMenu');
-function setMenu(open){
-  hamburger.setAttribute('aria-expanded', open ? 'true' : 'false');
-  mobileMenu.classList.toggle('open', open);
-  mobileMenu.setAttribute('aria-hidden', open ? 'false' : 'true');
-  document.body.style.overflow = open ? 'hidden' : '';
-}
-hamburger.addEventListener('click', () => setMenu(hamburger.getAttribute('aria-expanded') !== 'true'));
-
-/* ---------- Learn More pill ---------- */
-const learnMoreBtn = document.getElementById('learnMoreBtn');
-const learnMoreLabel = learnMoreBtn.querySelector('.label');
-function openLabel(){learnMoreBtn.classList.add('expanded'); const w = learnMoreLabel.scrollWidth; learnMoreLabel.style.maxWidth = w+'px'; learnMoreLabel.style.opacity='1'; learnMoreLabel.style.marginLeft='2px';}
-function closeLabel(){learnMoreLabel.style.maxWidth='0px'; learnMoreLabel.style.opacity='0'; learnMoreLabel.style.marginLeft='0'; learnMoreBtn.classList.remove('expanded');}
-function expandCycle(){openLabel(); setTimeout(()=>{ if(!learnMoreBtn.matches(':hover,:focus,:focus-visible')) closeLabel(); }, 4000);}
-setTimeout(()=>{ expandCycle(); setInterval(expandCycle, 10000); }, 7000);
-learnMoreBtn.addEventListener('mouseenter', openLabel);
-learnMoreBtn.addEventListener('focus', openLabel);
-learnMoreBtn.addEventListener('mouseleave', closeLabel);
-learnMoreBtn.addEventListener('blur', closeLabel);
-
-/* ---------- Video & iOS hard rebuild path ---------- */
-const fsBtn    = document.getElementById('fullscreenToggle');
-const wrapper  = document.getElementById('videoWrapper');
-const IS_IOS   = (()=>{ const ua=navigator.userAgent||''; const p=navigator.platform||''; const macTouch=(p==='MacIntel'&&navigator.maxTouchPoints>1); return /iPad|iPhone|iPod/.test(ua)||macTouch; })();
-
-let video      = document.getElementById('lyloVideo');
-let lastFrameTS = performance.now();
-let lastCT       = 0;
-let rvfcActive   = false;
-let lastRebuildAt = 0;
-
-function safePlay(v=video){ if(!v) return; try{ v.play().catch(()=>{});}catch(e){} }
-
-function trackFrames(v){
-  rvfcActive = false;
-  if (!v) return;
-  if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
-    rvfcActive = true;
-    const tick = () => {
-      v.requestVideoFrameCallback((now/*ms*/)=>{ lastFrameTS = now; lastCT = v.currentTime||0; tick(); });
-    };
-    tick();
-  } else {
-    v.addEventListener('timeupdate', ()=>{ lastFrameTS = performance.now(); lastCT = v.currentTime||0; });
+  /* ===== Mobile menu ===== */
+  const hamburger = document.getElementById('hamburger');
+  const mobileMenu = document.getElementById('mobileMenu');
+  function setMenu(open){
+    hamburger.setAttribute('aria-expanded', open ? 'true' : 'false');
+    mobileMenu.classList.toggle('open', open);
+    mobileMenu.setAttribute('aria-hidden', open ? 'false' : 'true');
+    document.body.style.overflow = open ? 'hidden' : '';
   }
-}
+  hamburger.addEventListener('click', () => setMenu(hamburger.getAttribute('aria-expanded') !== 'true'));
 
-function wireVideo(v){
-  video = v; // update global
-  // boot play when ready
-  if (v.readyState >= 2) safePlay(v);
-  else v.addEventListener('loadeddata', ()=> safePlay(v), { once:true });
+  /* ===== “Learn more” pill ===== */
+  const learnMoreBtn = document.getElementById('learnMoreBtn');
+  const learnMoreLabel = learnMoreBtn.querySelector('.label');
+  function openLabel(){learnMoreBtn.classList.add('expanded'); const w=learnMoreLabel.scrollWidth; learnMoreLabel.style.maxWidth=w+'px'; learnMoreLabel.style.opacity='1'; learnMoreLabel.style.marginLeft='2px';}
+  function closeLabel(){learnMoreLabel.style.maxWidth='0px'; learnMoreLabel.style.opacity='0'; learnMoreLabel.style.marginLeft='0'; learnMoreBtn.classList.remove('expanded');}
+  function expandCycle(){openLabel(); setTimeout(()=>{ if(!learnMoreBtn.matches(':hover,:focus,:focus-visible')) closeLabel(); }, 4000);}
+  setTimeout(()=>{ expandCycle(); setInterval(expandCycle, 10000); }, 7000);
+  learnMoreBtn.addEventListener('mouseenter', openLabel);
+  learnMoreBtn.addEventListener('focus', openLabel);
+  learnMoreBtn.addEventListener('mouseleave', closeLabel);
+  learnMoreBtn.addEventListener('blur', closeLabel);
 
-  // user-gesture fallback
-  const onTap = ()=>{ safePlay(v); if(v.paused){ v.setAttribute('controls',''); safePlay(v);} };
-  v.addEventListener('touchstart', onTap, { passive:true, once:true });
-  v.addEventListener('click', onTap, { once:true });
-  v.addEventListener('play', ()=>{ if(v.hasAttribute('controls')) v.removeAttribute('controls'); });
+  /* ===== Video handling ===== */
+  const wrapper = document.getElementById('videoWrapper');
+  let video = document.getElementById('lyloVideo');
+  const fsBtn = document.getElementById('fullscreenToggle');
 
-  // track frames/time
-  trackFrames(v);
+  const IS_IOS = (() => {
+    const ua = navigator.userAgent || '';
+    const platform = navigator.platform || '';
+    const macTouch = platform === 'MacIntel' && navigator.maxTouchPoints > 1;
+    return /iPad|iPhone|iPod/.test(ua) || macTouch;
+  })();
 
-  // iOS fullscreen UI hooks
-  if (IS_IOS){
-    v.addEventListener('webkitbeginfullscreen', ()=>{ /* no-op here; native player */ });
-    v.addEventListener('webkitendfullscreen', ()=>{ scheduleIOSRecovery('exit-fullscreen'); });
+  function safePlay(v=video){ try{ v.play().catch(()=>{});}catch(e){} }
+
+  /* Frame progress watch (for gentle recovery after lock/return) */
+  let lastFrameTS = performance.now();
+  function startFrameWatch(v){
+    if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
+      const loop = () => v.requestVideoFrameCallback((now)=>{ lastFrameTS = now; loop(); });
+      loop();
+    } else {
+      v.addEventListener('timeupdate', ()=>{ lastFrameTS = performance.now(); });
+    }
   }
-}
 
-function buildFreshVideo({ seekTo=null } = {}){
-  const old = video;
-  const fresh = old.cloneNode(true);           // clones attributes + <source> children + poster fallback
-  fresh.removeAttribute('id');                 // avoid duplicate IDs during swap
-  old.parentNode.replaceChild(fresh, old);
-  fresh.id = 'lyloVideo';
-  wireVideo(fresh);
+  function framesStale(ms){ return (performance.now() - lastFrameTS) > ms; }
 
-  // seek close to where we left off (after it's ready enough)
-  const target = (seekTo!=null ? seekTo : lastCT);
-  const seekTarget = Math.max(0, target - 1.0);
-  const doSeek = ()=>{
-    try { fresh.currentTime = seekTarget; } catch(e){}
-    safePlay(fresh);
-  };
-  if (fresh.readyState >= 2) doSeek();
-  else fresh.addEventListener('loadeddata', doSeek, { once:true });
-}
-
-function framesStale(ms){ return (performance.now() - lastFrameTS) > ms; }
-
-function hardRebuildIOS(reason){
-  const now = Date.now();
-  if (now - lastRebuildAt < 2500) return; // cooldown to avoid loops
-  lastRebuildAt = now;
-  buildFreshVideo({ seekTo:lastCT });
-}
-
-function scheduleIOSRecovery(reason){
-  if (!IS_IOS) return;
-  // Step 1: ensure inline & try to play
-  try { if (video.webkitSetPresentationMode) video.webkitSetPresentationMode('inline'); } catch(e){}
-  safePlay();
-
-  // Step 2: quick check after UI settles; if stale, rebuild once.
-  setTimeout(()=>{
-    if (!video.paused && framesStale(700)) {
-      hardRebuildIOS(reason);
-    }
-  }, 300);
-
-  // Step 3: final check; if still stale (rare), one more rebuild attempt won’t run due to cooldown; try a tiny rewind to kick.
-  setTimeout(()=>{
-    if (!video.paused && framesStale(1400)) {
-      try { video.currentTime = Math.max(0, (video.currentTime||0) - 3); } catch(e){}
-      safePlay();
-    }
-  }, 900);
-}
-
-/* initial wiring */
-wireVideo(video);
-
-/* resume & recovery on return/lock */
-function onReturn(){
-  if (IS_IOS) scheduleIOSRecovery('return');
-  else safePlay();
-}
-document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState==='visible') onReturn(); });
-window.addEventListener('pageshow', onReturn);
-window.addEventListener('focus', onReturn);
-
-/* fullscreen controls (native on iOS; wrapper elsewhere) */
-function isFullscreen(){ return document.fullscreenElement || document.webkitFullscreenElement || null; }
-async function enterFullscreen(){
-  if (IS_IOS && video && video.webkitEnterFullscreen) { try { return video.webkitEnterFullscreen(); } catch(e){} }
-  if (wrapper.requestFullscreen) return wrapper.requestFullscreen();
-  if (wrapper.webkitRequestFullscreen) return wrapper.webkitRequestFullscreen();
-}
-async function exitFullscreen(){
-  if (document.exitFullscreen) return document.exitFullscreen();
-  if (document.webkitExitFullscreen) return document.webkitExitFullscreen();
-}
-function updateFsBtnUI(full){
-  fsBtn.textContent = full ? '⤡' : '⤢';
-  fsBtn.setAttribute('aria-label', full ? 'Exit fullscreen' : 'Enter fullscreen');
-}
-fsBtn.addEventListener('click', async ()=>{
-  if (!isFullscreen()){ await enterFullscreen(); updateFsBtnUI(true); }
-  else { await exitFullscreen(); updateFsBtnUI(false); }
-});
-document.addEventListener('fullscreenchange', ()=> updateFsBtnUI(!!isFullscreen()));
-document.addEventListener('webkitfullscreenchange', ()=> updateFsBtnUI(!!isFullscreen()));
-
-/* ---------- CTA: mobile-only delay, no spinner ---------- */
-const joinCta = document.getElementById('joinCta');
-const isMobile = window.matchMedia('(max-width: 979px)');
-const DELAY_MS = 900;
-if (joinCta){
-  joinCta.addEventListener('click', (e) => {
-    if (!isMobile.matches) return;
-    if (joinCta.classList.contains('loading')) return;
-    e.preventDefault();
-    joinCta.classList.add('loading');
-    joinCta.setAttribute('aria-busy','true');
-    const href = joinCta.getAttribute('href') || '/';
+  /* Gentle recover after returning from background/lock (iOS only) */
+  function tryRecoverAfterReturn(){
+    if (!IS_IOS) { safePlay(); return; }
+    safePlay();
     setTimeout(() => {
-      joinCta.classList.remove('loading');
-      joinCta.removeAttribute('aria-busy');
-      window.location.href = href;
-    }, DELAY_MS);
-  }, { passive:false });
-}
+      if (!video.paused && framesStale(900)) {
+        // Rebuild the element inline (no fullscreen transitions)
+        rebuildVideoInline();
+      }
+    }, 350);
+  }
+
+  /* Inline rebuild (keeps sources, avoids pipeline stuck state) */
+  function rebuildVideoInline(){
+    const currentTime = video.currentTime || 0;
+    const fresh = video.cloneNode(true);
+    fresh.removeAttribute('id');
+    video.parentNode.replaceChild(fresh, video);
+    fresh.id = 'lyloVideo';
+    video = fresh;
+
+    const onReady = () => {
+      try { video.currentTime = Math.max(0, currentTime - 1.0); } catch(e){}
+      safePlay();
+    };
+    if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
+
+    startFrameWatch(video);
+    // rebind tap fallback
+    const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
+    video.addEventListener('touchstart', onTap, { passive:true, once:true });
+    video.addEventListener('click', onTap, { once:true });
+    video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
+  }
+
+  /* Boot video */
+  (function boot(){
+    const onReady = () => safePlay();
+    if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
+    startFrameWatch(video);
+    const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
+    video.addEventListener('touchstart', onTap, { passive:true, once:true });
+    video.addEventListener('click', onTap, { once:true });
+    video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
+  })();
+
+  /* Resume after background/lock */
+  document.addEventListener('visibilitychange', () => { if (document.visibilityState === 'visible') tryRecoverAfterReturn(); });
+  window.addEventListener('pageshow', tryRecoverAfterReturn);
+  window.addEventListener('focus', tryRecoverAfterReturn);
+
+  /* ===== Fullscreen handling =====
+     - Desktop/Android: native Fullscreen API on wrapper
+     - iOS: simulated fullscreen overlay (no native player)
+  */
+  function isFullscreen(){ return document.fullscreenElement || document.webkitFullscreenElement || null; }
+  async function enterNativeFS(){
+    if (wrapper.requestFullscreen) return wrapper.requestFullscreen();
+    if (wrapper.webkitRequestFullscreen) return wrapper.webkitRequestFullscreen();
+  }
+  async function exitNativeFS(){
+    if (document.exitFullscreen) return document.exitFullscreen();
+    if (document.webkitExitFullscreen) return document.webkitExitFullscreen();
+  }
+  function updateFsBtnUI(full){
+    fsBtn.textContent = full ? '⤡' : '⤢';
+    fsBtn.setAttribute('aria-label', full ? 'Exit fullscreen' : 'Enter fullscreen');
+  }
+
+  /* Simulated fullscreen for iOS */
+  let fsOverlay = null, placeholder = null, overlayOpen = false;
+  function ensureOverlay(){
+    if (fsOverlay) return fsOverlay;
+    fsOverlay = document.createElement('div');
+    fsOverlay.className = 'fs-overlay';
+    document.body.appendChild(fsOverlay);
+    return fsOverlay;
+  }
+  function openOverlay(){
+    if (overlayOpen) return;
+    ensureOverlay();
+    placeholder = document.createComment('video-placeholder');
+    wrapper.parentNode.insertBefore(placeholder, wrapper);
+    fsOverlay.appendChild(wrapper);
+    fsOverlay.classList.add('open');
+    overlayOpen = true;
+    updateFsBtnUI(true);
+    safePlay();
+  }
+  function closeOverlay(){
+    if (!overlayOpen) return;
+    fsOverlay.classList.remove('open');
+    if (placeholder && placeholder.parentNode){
+      placeholder.parentNode.insertBefore(wrapper, placeholder);
+      placeholder.remove();
+      placeholder = null;
+    }
+    overlayOpen = false;
+    updateFsBtnUI(false);
+    // after “exiting fullscreen” on iOS (overlay), make sure frames advance
+    setTimeout(() => {
+      if (!video.paused && framesStale(700)) rebuildVideoInline();
+    }, 300);
+  }
+
+  fsBtn.addEventListener('click', async () => {
+    if (IS_IOS){
+      overlayOpen ? closeOverlay() : openOverlay();
+    } else {
+      if (!isFullscreen()){ await enterNativeFS(); updateFsBtnUI(true); }
+      else { await exitNativeFS(); updateFsBtnUI(false); }
+    }
+  });
+
+  document.addEventListener('fullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
+  document.addEventListener('webkitfullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
+
+  /* ===== CTA: mobile-only delayed nav (no spinner) ===== */
+  const joinCta = document.getElementById('joinCta');
+  const isMobile = window.matchMedia('(max-width: 979px)');
+  const DELAY_MS = 900;
+  if (joinCta){
+    joinCta.addEventListener('click', (e) => {
+      if (!isMobile.matches) return;
+      if (joinCta.classList.contains('loading')) return;
+      e.preventDefault();
+      joinCta.classList.add('loading');
+      joinCta.setAttribute('aria-busy','true');
+      const href = joinCta.getAttribute('href') || '/';
+      setTimeout(() => {
+        joinCta.classList.remove('loading');
+        joinCta.removeAttribute('aria-busy');
+        window.location.href = href;
+      }, DELAY_MS);
+    }, { passive:false });
+  }
 </script>
 
 </body>
